<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:background="@color/white"
            tools:context=".features.login.LoginActivity">


        <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/subaru_logo_new"
                android:id="@+id/imageView3"
                app:layout_constraintLeft_toLeftOf="@id/guideline_left"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/guideline_top"
        />

        <EditText
                android:id="@+id/ed_username"
                android:layout_width="0dp"
                android:layout_height="@dimen/ed_height"
                style="@style/EditLogin"
                android:hint="@string/username"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/grey"
                android:drawableLeft="@drawable/user_icon"
                android:drawablePadding="10dp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no" android:layout_marginTop="50dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>

        <EditText
                android:id="@+id/ed_password"
                android:layout_width="0dp"
                android:layout_height="@dimen/ed_height"
                style="@style/EditLogin"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                app:layout_constraintTop_toBottomOf="@+id/ed_username"
                android:padding="10dp"
                android:inputType="textPassword"
                android:backgroundTint="@color/grey"
                android:textColorHint="@color/grey"
                android:drawableLeft="@drawable/password_icon"
                android:focusable="true"
                android:drawablePadding="10dp"
                android:focusableInTouchMode="true"
                android:layout_marginTop="24dp"
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="@id/guideline_left"
                app:layout_constraintEnd_toStartOf="@id/guideline_right"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height_small"
                style="@style/ButtonNormalMaterial"
                android:text="@string/login"
                android:textColor="@color/white"

                android:backgroundTint="@color/dark_blue"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline_left"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/ed_password"/>
        <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:indeterminateTintMode="multiply"
                android:indeterminateTint="@color/dark_blue"
                android:progressDrawable="@drawable/circular_progress_bar"
                android:layout_alignParentBottom="true"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/scrap_image_uploader"
                android:id="@+id/imageView"
                android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView3"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline_right"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_left"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.1"/>
        <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline_right"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.9"/>
        <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                    android:layout_height="wrap_content"
                                                    android:id="@+id/guideline_top"
                                                    android:orientation="horizontal"
                                                    app:layout_constraintGuide_percent="0.1"/>
        <!--<Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="@dimen/ed_height"
            style="@style/ButtonNormal"
            android:background="@drawable/gradient_button_background"
            android:id="@+id/btn_login" android:layout_marginTop="24dp"
            android:onClick="@{() -> viewmodel.validateLogin()}"
            app:layout_constraintTop_toBottomOf="@+id/ed_password"
            app:layout_constraintStart_toStartOf="@+id/ed_password"
            app:layout_constraintEnd_toEndOf="@+id/ed_password"/>-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
